[package]
name = "audit-test"
version = "0.1.0"
authors = ["Mason Gup <mgup@mdsol.com>"]
edition = "2018"

[dependencies]
docopt = ">= 1.0.2"
serde = ">= 1.0.82"
serde_derive = ">= 1.0.82"
serde_json = ">= 1.0.33"
rusoto_core = ">= 0.36.0"
rusoto_kinesis = ">= 0.36.0"
rusoto_dynamodb = ">= 0.36.0"
uuid = { version = ">= 0.7.1", features = ["v4"] }
chrono = ">= 0.4.6"
rand = ">= 0.6.1"
hyper = ">= 0.12"
hyper-tls = ">= 0.3.1"
sha2 = ">= 0.7.1"
hex = ">= 0.3.2"
bytes = ">= 0.4.11"
ring = "0.16.9"
base64 = ">= 0.9.3"
dirs = "2.0.2"
serde_yaml = "*"
futures = "*"
tokio = "*"
openssl = "*"
