[package]
name = "audit-test"
version = "0.1.0"
authors = ["Mason Gup <mgup@mdsol.com>"]
edition = "2018"

[dependencies]
structopt = "*"
serde = ">= 1.0.82"
serde_derive = ">= 1.0.82"
serde_json = ">= 1.0.33"
rusoto_core = "*"
rusoto_kinesis = "*"
rusoto_dynamodb = "*"
uuid = { version = ">= 0.7.1", features = ["v4"] }
chrono = ">= 0.4.6"
rand = ">= 0.6.1"
hyper = ">= 0.12"
hyper-tls = ">= 0.3.1"
futures = "*"
tokio = { version = "*", features = ["full"] }
mauth-client = "*"
